// @proto/ type following command to build pb.go
// protoc --proto_path=./ --go_out=./ --go-grpc_out=./ --grpc-gateway_out ./ --go_opt=paths=source_relative --go-grpc_opt=paths=source_relative --grpc-gateway_opt logtostderr=true --grpc-gateway_opt=paths=source_relative pharmacy/pharmacy.proto
syntax = "proto3";
package pharmacy;
option go_package = "github.com/JamesHsu333/kdan/proto/pharmacy;pharmacyProto";

message Pharmacy {
  int32 id = 1;
  string name = 2;
  string opening_hours = 3;
  float cash_balance = 4;
}

message Mask {
  int32 id = 1;
  string name = 2;
}